# TicTacToe

./: .gitignore  CMakeLists.txt
Sources/: TicTacToePlayer.cpp  TicTacToePlayer.h  logger.cpp  main.cpp
